# statuspage

./: .gitignore  README.md  flake.nix  result
backend/: alembic.ini  default.nix  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 26301adbb256_add_service_group_check_fields.py  492f3e974bf2_add_is_public_to_service_and_session_.py  5ebfa6375b32_initial.py  a1b2c3d4e5f6_add_site_url_to_service.py  a2b3c4d5e6f7_add_service_status_history.py  b1c2d3e4f5a6_add_notification_tables.py  c52e5e0ecf6d_add_on_demand_to_service.py  d3e4f5a6b7c8_add_failure_threshold_to_service.py  e1f2a3b4c5d6_rename_on_demand_to_muted.py  ee02447abc89_add_maintenance_service_status.py  f1a2b3c4d5e6_add_command_check_type.py
backend/statuspage/: auth.py  checker.py  config.py  main.py  notifier.py
backend/statuspage/database/: connection.py  models.py
backend/statuspage/routers/: api.py  auth.py  frontend.py
frontend/: default.nix  package-lock.json  package.json  vite.config.ts
frontend/src/: hooks.server.ts
frontend/src/lib/: StatusPageView.svelte  types.ts
frontend/src/lib/server/: api.ts  auth.ts
frontend/src/routes/: +page.server.ts  +page.svelte
frontend/src/routes/admin/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte
frontend/src/routes/login/: +page.server.ts  +page.svelte
frontend/src/routes/logout/: +page.server.ts
frontend/src/routes/private/: +page.server.ts  +page.svelte
nix/: nixos-module.nix
